--- a/css_for_map.css
+++ b/css_for_map.css
@@ -29,11 +29,11 @@ h1 {
     font-size: 16px;
     line-height: 24px;
 }
-.legend img {
-    max-width: 200px;
-    margin: auto;
-    display: block;
+
+.popup {
+	text-align: center;
 }
+
 
 
 #description {
