--- a/css_for_map_v3-1.css
+++ b/css_for_map_v3-1.css
@@ -11,11 +11,16 @@
     font-family: Yu Gothic;
 }
 
+.leaflet-tooltip-tip {
+	width: 0px;
+    height: 0px;
+}
+
 .constituencyLabel {
 	background-color: rgba(255,255,255,.4);
 }
 
-.cityLabelsStyle {
+.cityLablesStyle {
 	color: grey;
     font-size: 12px;
     font-weight: 700;
