--- a/css_for_map_v3-2.css
+++ b/css_for_map_v3-2.css
@@ -11,11 +11,15 @@
     font-family: Yu Gothic;
 }
 
+.leaflet-popup-tip-container {
+    display: none;
+} 
+
 .constituencyLabel {
 	background-color: rgba(255,255,255,.4);
 }
 
-.cityLabelsStyle {
+.cityLablesStyle {
 	color: grey;
     font-size: 12px;
     font-weight: 700;
