--- a/css_for_map_v3-3.css
+++ b/css_for_map_v3-3.css
@@ -11,17 +11,18 @@
     font-family: Yu Gothic;
 }
 
+
+
 .constituencyLabel {
 	background-color: rgba(255,255,255,.4);
 }
 
-.cityLabelsStyle {
+.cityLablesStyle {
 	color: grey;
     font-size: 12px;
     font-weight: 700;
-    background-color: none;
+    background-color: rgba(255,255,255,.2);;
     border-color: none;
-    background: none;
     border: none;
     box-shadow: none;
     margin: 0px;
