--- a/css_for_map_v3-4.css
+++ b/css_for_map_v3-4.css
@@ -30,9 +30,99 @@
 }
 
 
-.AfD {
+#politician0 {
 	border: blue;
 }
+
+
+
+
+
+
+.leaflet-sidebar {
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  width: 100%;
+  overflow: hidden;
+  z-index: 2000;
+  height: 500px; }
+  .leaflet-sidebar.collapsed {
+    width: 40px; }
+
+.leaflet-sidebar-header {
+  margin: 0px 0px 0;
+  height: 40px;
+  padding: 10px;
+  line-height: 40px;
+  border-radius: 0;
+  top: 0;
+  left: 0;
+  border: none;
+  width: 100%;
+  font-size: 14.4pt;
+  color: #fff;
+  background-color: #F17240; }
+
+  .leaflet-sidebar.collapsed {
+    width: 60px; }
+  .leaflet-sidebar.collapsed {
+    width: 60px; }
+
+.leaflet-sidebar-tabs {
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  background-color: #fff; }
+  .leaflet-sidebar-left .leaflet-sidebar-tabs {
+    left: 0; }
+  .leaflet-sidebar-right .leaflet-sidebar-tabs {
+    right: 0; }
+  .leaflet-sidebar-tabs, .leaflet-sidebar-tabs > ul {
+    position: absolute;
+    width: 60px;
+    margin: 0;
+    padding: 0;
+    list-style-type: none; }
+    .leaflet-sidebar-tabs > li, .leaflet-sidebar-tabs > ul > li {
+      width: 100%;
+      height: 60px;
+      color: #fff;
+      font-size: 12pt;
+      overflow: hidden;
+      transition: all 80ms; }
+      .leaflet-sidebar-tabs > li:hover, .leaflet-sidebar-tabs > ul > li:hover {
+        color: #000;
+        background-color: #eee; }
+      .leaflet-sidebar-tabs > li.active, .leaflet-sidebar-tabs > ul > li.active {
+        color: #fff;
+        background-color: #0074d9; }
+      .leaflet-sidebar-tabs > li.disabled, .leaflet-sidebar-tabs > ul > li.disabled {
+        color: rgba(51, 51, 51, 0.4); }
+        .leaflet-sidebar-tabs > li.disabled:hover, .leaflet-sidebar-tabs > ul > li.disabled:hover {
+          background: transparent; }
+        .leaflet-sidebar-tabs > li.disabled > a, .leaflet-sidebar-tabs > ul > li.disabled > a {
+          cursor: default; }
+      .leaflet-sidebar-tabs > li > a, .leaflet-sidebar-tabs > ul > li > a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        line-height: 40px;
+        color: inherit;
+        text-decoration: none;
+        text-align: center;
+        cursor: pointer; }
+  .leaflet-sidebar-tabs > ul + ul {
+    bottom: 0; }
+
+  .leaflet-sidebar-right .leaflet-sidebar-content {
+    left: 0;
+    right: 60px; }
+
+
+
+
+
 
 
 
