--- a/css_for_map_v3-4.css
+++ b/css_for_map_v3-4.css
@@ -86,17 +86,17 @@
     list-style-type: none; }
     .leaflet-sidebar-tabs > li, .leaflet-sidebar-tabs > ul > li {
       width: 100%;
-      height: 60px;
-      color: #fff;
+      height:60px;
+      color: rgb(0,0,0);
       font-size: 12pt;
       overflow: hidden;
       transition: all 80ms; }
       .leaflet-sidebar-tabs > li:hover, .leaflet-sidebar-tabs > ul > li:hover {
-        color: #000;
+        color: rgb(0,0,0);
         background-color: #eee; }
       .leaflet-sidebar-tabs > li.active, .leaflet-sidebar-tabs > ul > li.active {
         color: #fff;
-        background-color: #0074d9; }
+        background-color: #F17240; }
       .leaflet-sidebar-tabs > li.disabled, .leaflet-sidebar-tabs > ul > li.disabled {
         color: rgba(51, 51, 51, 0.4); }
         .leaflet-sidebar-tabs > li.disabled:hover, .leaflet-sidebar-tabs > ul > li.disabled:hover {
@@ -107,7 +107,7 @@
         display: block;
         width: 100%;
         height: 100%;
-        line-height: 40px;
+        line-height: 60px;
         color: inherit;
         text-decoration: none;
         text-align: center;
@@ -119,6 +119,22 @@
     left: 0;
     right: 60px; }
 
+
+.leaflet-sidebar-content {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.95);
+  overflow-x: hidden;
+  overflow-y: auto; }
+  .leaflet-sidebar-left .leaflet-sidebar-content {
+    left: 40px;
+    right: 0; }
+  .leaflet-sidebar-right .leaflet-sidebar-content {
+    left: 0;
+    right: 60px; }
+  .leaflet-sidebar.collapsed > .leaflet-sidebar-content {
+    overflow-y: hidden; }
 
 
 
