--- a/css_for_map_v3-4.css
+++ b/css_for_map_v3-4.css
@@ -122,7 +122,7 @@
 
 .leaflet-sidebar-content {
   position: absolute;
-  top: 0;
+  top: 0px;
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.95);
   overflow-x: hidden;
@@ -136,10 +136,18 @@
   .leaflet-sidebar.collapsed > .leaflet-sidebar-content {
     overflow-y: hidden; }
 
+.polInformation {
+	top: 60px;
+	margin-top: 60px;
+	padding: 10px;
+	padding-left: 20px;
+
+}
 
 
-
-
+p {
+	font-family: Yu Gothic;
+}
 
 
 h1 {
@@ -216,6 +224,7 @@ h1 {
 body {
 		padding: 0;
 		margin: 0;
+		font-family: Yu Gothic;
 	}
 html, body, #map {
 	height: 100%;
