sidebar colors testing

--- a/css_for_map_v3-4.css
+++ b/css_for_map_v3-4.css
@@ -62,7 +62,7 @@
   width: 100%;
   font-size: 14.4pt;
   color: #fff;
-  background-color: #F17240; }
+  background-color: rgba(241,114,64,1); }
 
   .leaflet-sidebar.collapsed {
     width: 60px; }
@@ -74,10 +74,6 @@
   bottom: 0;
   height: 100%;
   background-color: #fff; }
-  .leaflet-sidebar-left .leaflet-sidebar-tabs {
-    left: 0; }
-  .leaflet-sidebar-right .leaflet-sidebar-tabs {
-    right: 0; }
   .leaflet-sidebar-tabs, .leaflet-sidebar-tabs > ul {
     position: absolute;
     width: 60px;
@@ -92,11 +88,14 @@
       overflow: hidden;
       transition: all 80ms; }
       .leaflet-sidebar-tabs > li:hover, .leaflet-sidebar-tabs > ul > li:hover {
-        color: rgb(0,0,0);
-        background-color: #eee; }
+        color: rgb(0,0,0);;
+    	opacity: 0.9;}
       .leaflet-sidebar-tabs > li.active, .leaflet-sidebar-tabs > ul > li.active {
         color: #fff;
-        background-color: #F17240; }
+/*       background-color: rgb(255,255,255) */
+        opacity: 1;
+/*    	border: 1px solid rgb(255,255,255);} */
+		}
       .leaflet-sidebar-tabs > li.disabled, .leaflet-sidebar-tabs > ul > li.disabled {
         color: rgba(51, 51, 51, 0.4); }
         .leaflet-sidebar-tabs > li.disabled:hover, .leaflet-sidebar-tabs > ul > li.disabled:hover {
@@ -108,6 +107,7 @@
         width: 100%;
         height: 100%;
         line-height: 60px;
+        opacity: 0.8;
 
         color: inherit;
         text-decoration: none;
@@ -142,8 +142,45 @@
 	margin-top: 60px;
 	padding: 10px;
 	padding-left: 20px;
+	background-color: white;
 
 }
+
+
+.SPD {
+	background-color: rgba(223,11,37,1)
+}
+
+.CDU {
+	background-color: rgba(0,0,0,1)
+}
+.CSU {
+	background-color: rgba(0,0,0,1)
+}
+.FDP {
+	background-color: rgba(254,235,52,1)
+}
+.DIEGRUENEN {
+	background-color: rgba(74,147,43,1)
+}
+
+.DIELINKE {
+	background-color: rgba(188,52,117,1)
+}
+.AfD {
+	background-color: rgba(26,159,221,1)
+}
+.leaflet-sidebar-tabs > ul > li > a > .countyTab {
+	background-color: #F17240;
+	opacity: 1;
+}
+.constituencyTab {
+	background-color: #F17240;
+	font-size: 10px;
+	opacity: 1;
+
+}
+
 
 
 p {
