--- a/css/leaflet-sidebar.css
+++ b/css/leaflet-sidebar.css
@@ -59,14 +59,6 @@
       font-size: 12pt;
       overflow: hidden;
       transition: all 80ms; }
-      .leaflet-sidebar-tabs > li:hover, .leaflet-sidebar-tabs > ul > li:hover {
-        color: #000;
-        background-color: #eee; }
-      .leaflet-sidebar-tabs > li.active, .leaflet-sidebar-tabs > ul > li.active {
-        color: #fff;
-        background-color: #0074d9; }
-      .leaflet-sidebar-tabs > li.disabled, .leaflet-sidebar-tabs > ul > li.disabled {
-        color: rgba(51, 51, 51, 0.4); }
         .leaflet-sidebar-tabs > li.disabled:hover, .leaflet-sidebar-tabs > ul > li.disabled:hover {
           background: transparent; }
         .leaflet-sidebar-tabs > li.disabled > a, .leaflet-sidebar-tabs > ul > li.disabled > a {
@@ -109,6 +101,7 @@
   box-sizing: border-box;
   padding: 10px 20px; }
   .leaflet-sidebar-pane.active {
+    height: 100%;
     display: block; }
   @media (min-width: 768px) and (max-width: 991px) {
     .leaflet-sidebar-pane {
