--- a/css_for_map_v3-4.css
+++ b/css_for_map_v3-4.css
@@ -92,12 +92,14 @@
       transition: all 80ms; 
  	  animation: fadein 0.5s;}
       .leaflet-sidebar-tabs > li:hover, .leaflet-sidebar-tabs > ul > li:hover {
-        color: rgb(0,0,0);;
-    	opacity: 0.9;}
+        color: rgb(0,0,0);
+    	opacity: 0.9;
+    	font-size: 14pt}
       .leaflet-sidebar-tabs > li.active, .leaflet-sidebar-tabs > ul > li.active > a{
         color: #fff;
 /*       background-color: rgb(255,255,255) */
         opacity: 1;
+        font-size: 14pt
 /*    	border: 1px solid rgb(255,255,255);} */
 		}
       .leaflet-sidebar-tabs > li.disabled, .leaflet-sidebar-tabs > ul > li.disabled {
@@ -157,11 +159,10 @@
     .leaflet-sidebar-header {
       width: 360px; } }
 
-.polInformation, .countyInformation, .constituencyInformation {
-	top: 60px;
-	left: 40px;
-	right: 20px;
-	position: absolute;
+.polInformation, .countyInformation, .constituencyInformation, .attributionInformation {
+	padding-left: 40px;
+	padding-right: 20px;
+	height: 440px;
 }
 
 #sidebarTitle > a{
@@ -216,6 +217,22 @@ div#Parteilos > .leaflet-sidebar-header, .Parteilos , #ParteilosLine {
 #sidebarTitle.FDP > a {
 	color: black;
 }
+
+.attributionTab {
+	color: #F17240;
+	position: absolute;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+}
+
+.attributionTab:hover {
+	font-size: 2em;
+}
+.attributionTab.active {
+	background-color: #F17240;
+}
+
 
 
 
@@ -283,6 +300,26 @@ p {
   text-align: center;
 }
 
+#backdrop {
+	width:100%;
+	height: 100%;
+	background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    position: absolute;
+   z-index: 5;
+}
+
+#symbols {
+	color: rgba(241,114,64,1);
+}
+#symbols:hover {
+	transform: scale(1.1)
+}
+
+#symbolsBar {
+	position: absolute;
+	bottom:20px;
+	left: 40px;
+}
 
 
 body {
@@ -301,18 +338,6 @@ html, body, #map {
     animation: fadein 3s;
 }
 
-#backdrop {
-	width:100%;
-	height: 100%;
-	background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-    position: absolute;
-   z-index: 5;
-
- 
-}
-
-
-
 
 a:link {
 text-decoration: none;
@@ -324,6 +349,10 @@ a:visited {
 a:hover {
 	text-decoration: underline;
 	font-style: bold;
+}
+
+a.link:hover {
+	transform: scale(1.1);
 }
 
 hr {
