--- a/css_for_map_v3-4.css
+++ b/css_for_map_v3-4.css
@@ -227,7 +227,7 @@ div#Parteilos > .leaflet-sidebar-header, .Parteilos , #ParteilosLine {
 }
 
 .attributionTab:hover {
-	font-size: 2em;
+	font-size: 1.5em;
 }
 .attributionTab.active {
 	background-color: #F17240;
@@ -249,6 +249,9 @@ div#Parteilos > .leaflet-sidebar-header, .Parteilos , #ParteilosLine {
 	font-size: 10px;
 	opacity: 1;
 	animation: none;
+}
+.countyTab {
+	font-size: 14px;
 }
 
 h1 {
@@ -284,7 +287,10 @@ p {
 	text-align: center;
 }
 
-
+#everyting {
+  width: 100%;
+  height: 100%;
+}
 
 #description {
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
@@ -296,23 +302,68 @@ p {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 5;
-  width: 80%;
+  width: 600px;
   text-align: center;
 }
 
 #backdrop {
 	width:100%;
 	height: 100%;
-	background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-    position: absolute;
-   z-index: 5;
+  position: absolute;
+	background-color: rgba(0,0,0, 0.4);
+   position: absolute;
+  z-index: 5;
+  height: calc(100% - 50px);
 }
 
-#symbols {
+#header {
+  height: 50px;
+  background-color: rgba(241,114,64,1);
+  z-index: 10;
+}
+#slogan {
+  color: white;
+  line-height: 50px;
+
+  height: 100%;
+  padding-left: 50px;
+  z-index: 11;
+}
+
+
+
+#gitHub, #aw {
 	color: rgba(241,114,64,1);
 }
-#symbols:hover {
+#gitHub:hover, #aw:hover , #twitter:hover{
 	transform: scale(1.1)
+}
+#twitter {
+  color: rgba(241,114,64,1);
+  position: absolute;
+  left: 80px;
+
+}
+
+
+#aw {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  height: 50px;
+  width: 50px;
+/*  background-color: rgba(255,255,255,0.8);*/
+  border-radius: 3;
+  z-index: 2000;
+}
+
+#logo {
+  position: absolute;
+  z-index: 210;
+  background-color: white
+  height:100%;
+  width: 100%;
+
 }
 
 #symbolsBar {
@@ -327,15 +378,17 @@ body {
 		margin: 0;
 		font-family: Yu Gothic;
 	}
-html, body, #map {
+html, body {
 	height: 100%;
 	width: 100%;
 }
 
 #map {
+  width: 100%;
 	filter: blur(8px);
-    -webkit-filter: blur(8px);
-    animation: fadein 3s;
+  -webkit-filter: blur(8px);
+  animation: fadein 3s;
+  height: calc(100% - 50px);
 }
 
 
