--- a/css/leaflet-sidebar.css
+++ b/css/leaflet-sidebar.css
@@ -7,23 +7,20 @@
   z-index: 2000; }
   .leaflet-sidebar.collapsed {
     width: 60px; }
-  @media (min-width: 768px) {
+  @media (min-width: 600px) {
     .leaflet-sidebar {
       top: 10px;
       bottom: 10px;
       transition: width 500ms; } }
-  @media (min-width: 768px) and (max-width: 991px) {
+  @media (min-width: 600px) and (max-width: 991px) {
     .leaflet-sidebar {
       width: 305px;
       max-width: 305px; } }
-  @media (min-width: 992px) and (max-width: 1199px) {
+  @media (min-width: 600px) {
     .leaflet-sidebar {
       width: 390px;
       max-width: 390px; } }
-  @media (min-width: 1200px) {
-    .leaflet-sidebar {
-      width: 460px;
-      max-width: 460px; } }
+
 
 .leaflet-sidebar-left {
   left: 0; }
@@ -33,7 +30,7 @@
 
 .leaflet-sidebar-right {
   right: 0; }
-  @media (min-width: 768px) {
+  @media (min-width: 600px) {
     .leaflet-sidebar-right {
       right: 10px; } }
 
@@ -104,17 +101,15 @@
     height: 100%;
     display: block;
     right: 70px; }
-  @media (min-width: 768px) and (max-width: 991px) {
+  @media (min-width: 600px) and (max-width: 991px) {
     .leaflet-sidebar-pane {
       min-width: 245px; } }
-  @media (min-width: 992px) and (max-width: 1199px) {
+  @media (min-width: 992px) and{
     .leaflet-sidebar-pane {
       min-width: 330px; } }
-  @media (min-width: 1200px) {
-    .leaflet-sidebar-pane {
-      min-width: 400px; } }
 
-.leaflet-sidebar-header {
+
+/*.leaflet-sidebar-header {
   margin: -10px -20px 0;
   height: 40px;
   padding: 0 20px;
@@ -123,7 +118,7 @@
   color: #fff;
   background-color: #0074d9; }
   .leaflet-sidebar-right .leaflet-sidebar-header {
-    padding-left: 0px; }
+    padding-left: 0px; }*/
 
 .leaflet-sidebar-close {
   position: absolute;
@@ -139,7 +134,7 @@
 
 .leaflet-sidebar {
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.65); }
-  @media (min-width: 768px) {
+  @media (min-width: 600px) {
     .leaflet-sidebar {
       border-radius: 4px; }
       .leaflet-sidebar.leaflet-touch {
@@ -172,21 +167,17 @@
   box-shadow: none;
   border-left: 2px solid rgba(0, 0, 0, 0.2); }
 
-@media (min-width: 768px) {
+@media (min-width: 600px) {
   .leaflet-sidebar-right ~ .leaflet-control-container .leaflet-right {
     transition: right 500ms; } }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 600px) and (max-width: 991px) {
   .leaflet-sidebar-right ~ .leaflet-control-container .leaflet-right {
     right: 315px; } }
 
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 992px){
   .leaflet-sidebar-right ~ .leaflet-control-container .leaflet-right {
     right: 400px; } }
 
-@media (min-width: 1200px) {
-  .leaflet-sidebar-right ~ .leaflet-control-container .leaflet-right {
-    right: 470px; } }
-
 .leaflet-sidebar-right.collapsed ~ .leaflet-control-container .leaflet-right {
-  right: 50px; }
+  right: 60px; }
