--- a/css/leaflet-sidebar.css
+++ b/css/leaflet-sidebar.css
@@ -64,7 +64,7 @@
         display: block;
         width: 100%;
         height: 100%;
-        line-height: 40px;
+/*        line-height: 40px;*/
         color: inherit;
         text-decoration: none;
         text-align: center;
